<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MsgType" Id="{e2f8c4b1-0154-4555-a6a8-a0169e2e83e8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MsgType :
(
	Alarm := 0,
  Info,
  Register
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>