<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ShowMsgFields" Id="{b266a979-29fd-4f19-bc7e-40022021d607}">
    <Declaration><![CDATA[TYPE ST_ShowMsgFields :
STRUCT
  bDateTime    : BOOL := FALSE;
  bIstance     : BOOL := FALSE;
  bLongError   : BOOL := FALSE;
  bLongClass   : BOOL := FALSE;
  bRemed       : BOOL := FALSE;
  bTelegram    : BOOL := false;
  bTxtLog 		 : BOOL := FALSE;
  sStartMsg    : STRING(64);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>